--- a/static/index.html
+++ b/static/index.html
@@ -29,9 +29,10 @@
         // Import the Firebase SDK
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
         import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
-        import { firebaseConfig } from '/js/firebase-config.js';
+        import { loadFirebaseConfig } from '/js/firebase-config.js';
 
         // Initialize Firebase
+        const firebaseConfig = await loadFirebaseConfig();
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
